[package]
name = "goji"
version = "0.2.4"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Jira"
documentation = "http://softprops.github.io/goji"
homepage = "https://github.com/softprops/goji"
repository = "https://github.com/softprops/goji"
keywords = ["hyper", "jira"]
license = "MIT"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "softprops/goji" }
maintenance = { status = "actively-developed" }

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ['blocking'] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
url = "2.2.2"
